--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,7 @@ body, html {height: 100%}
 }
 </style>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
