--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 <title>Tul Breachstone Tracker</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="refresh" content="30">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
@@ -15,9 +16,6 @@ body, html {height: 100%}
 	background-size: cover;
 }
 </style>
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
 <body>
 
 	<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
